# sunny

./: .gitignore  .pre-commit-config.yaml  .swiftlint.yml  CLAUDE.md  README.md  Sunny-PRD-v2.docx  Sunny-Phase1-Tickets.md  Sunny-Phase2-Tickets.md  Sunny-Phase3-Tickets.md  manifest.yaml  run_tests.sh  test_reminder_flow.md
notes/: brief.md
sunny_agent/: pyproject.toml
sunny_agent/scripts/: benchmark_vision.py  ingest_workflows.py
sunny_agent/src/: agent.py  config.py  memory.py  prompts.py  screen_capture.py  screen_describer.py  tools.py  vision_agent.py  workflow_engine.py
sunny_agent/tests/: test_agent.py  test_screen_capture.py  test_screen_describer.py  test_vision_agent.py
sunny_app/: FIREBASE_SETUP.md  sunny.entitlements  sunnyDebug.entitlements  swift_unit_testing_guide.md
sunny_app/BroadcastExtension/: BroadcastExtension.entitlements  SampleHandler.swift
sunny_app/VoiceAgent/: GoogleService-Info.plist  Info.plist  Localizable.xcstrings  VoiceAgent.entitlements  VoiceAgentApp.swift
sunny_app/VoiceAgent.xcodeproj/: project.pbxproj
sunny_app/VoiceAgent/App/: AppView.swift  AppViewModel.swift
sunny_app/VoiceAgent/ControlBar/: ControlBar.swift
sunny_app/VoiceAgent/ConversationLog/: ConversationDetailView.swift  ConversationListView.swift
sunny_app/VoiceAgent/DI/: Dependencies.swift
sunny_app/VoiceAgent/Helpers/: Style.swift  SunnyLogger.swift
sunny_app/VoiceAgentTests/: EventKitReminderServiceTests.swift
supabase/functions/: README.md
supabase/migrations/: 001_initial_schema.sql  002_rpc_functions.sql  003_device_tokens.sql  004_workflows.sql  005_profile_summary.sql  006_api_p2_tables.sql  008_api_p3_session_context.sql
workflows/: __init__.py
workflows/wf0/: __init__.py  backfill_senior_descriptions.py  cli.py  discovery.py  eval.py  pipeline.py  scraper.py  transformer.py  validator.py
(+37 files in other folders)
