[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-starter-python"
version = "1.0.0"
description = "Simple voice AI assistant built with LiveKit Agents for Python"
requires-python = ">=3.9"

dependencies = [
    "livekit-agents[openai,anthropic,turn-detector,silero,cartesia,deepgram]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "numpy<2",
    "openai>=1.0.0",
    "python-dotenv",
    "tavily-python>=0.7.12",
    "supabase>=2.10.0",
    "pyyaml>=6.0",
    "Pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
# Type-check at 3.10 since the codebase uses X | Y union syntax.
# Strictness is intentionally relaxed for the existing codebase; tighten over time.
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
# src.* uses supabase's recursive JSON union type (int | float | Sequence[JSON] |
# Mapping[str, JSON]) and third-party SDK union types that mypy can't fully narrow.
# Ignored until the codebase adds explicit cast() or isinstance() guards.
module = ["src.memory", "src.tools", "src.workflow_engine", "src.agent"]
ignore_errors = true
